@@ -1,9 +1,0 @@
-{
-  "name": "hypothesis",
-  "title": "hypothes.is",
-  "id": "firefox@hypothes.is",
-  "description": "Annotate, highlight, and discuss anything on the Web.",
-  "author": "hypothes.is",
-  "license": "BSD",
-  "version": "{{ version }}"
-}
